tests/fixtures/errors/postprocess/variants/throw-null-at-import/postprocess.js
console.error({ test: 1, items: ["one", "two"] });
throw null;
